Don't need to change site settings
because you interact with the page when selecting a midi

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	document.querySelector('input').addEventListener('change', function() {
 	  var reader = new FileReader();
 	  reader.onload = function() {
-
 		var arrayBuffer = this.result;
 		var array = new Uint8Array(arrayBuffer);
 		player.load(array);
@@ -15,5 +14,5 @@
 	  reader.readAsArrayBuffer(this.files[0]);
 	}, false);
 </script>
-<p>Allow sound in site settings if using Chrome. Then select a MIDI file and it should play.</p>
+<p>Select a MIDI file and it should play.</p>
 <p>You can play with the objects of `Timidity` and `player` in the console.</p>
