--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <script src="app.js"></script>
-<h3><a href="https://www.npmjs.com/package/timidity">Timidity</a> MIDI Player Experiment</h3>
+<h1 style="color: #5e9ca0;">Crystalin Player Pre-Alpha (tmidity test)</h1>
+<h2 style="color: #2e6c80;">Code forked from: <a title="ledlamp" href="https://github.com/ledlamp">ledlamp</a></h2>
+<p>&nbsp;</p>
 <input id="midi" type="file" accept="audio/midi"></input>
 <script>
 	var player = new Timidity("timidity-web-experiment");
